# radio-transcription

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  README.md  docker-compose.yml  evaluate_transcriptions.ipynb  pyproject.toml  test_run.py
.agent/: instructions.md
.agents/: instructions.md
.github/: pull_request_template.md
.github/instructions/: JS_TS_STYLE.instructions.md  PYTHON_STYLE.instructions.md
.github/workflows/: ci.yml  integration-tests.yml  prepend-linear-issue-to-pr-title.yml  protobuf-sync-check.yml  trigger-deploy.yml
backend/: constants.py
backend/audio_ingestion/: batch_ingest.py  test_batch_ingest.py
backend/common/database/: mock_cache_provider.py  redis_service.py  test_redis_service.py
backend/common/storage/: cache_provider.py  mock_cache_provider.py  redis_service.py  test_redis_service.py
backend/pipeline/: README.md  shared_constants.py
backend/pipeline/common/: __init__.py  auth.py  constants.py  gcp_helper.py  logging.py
backend/pipeline/detection/: Dockerfile  __init__.py  detector_executor.py  detector_factory.py  normalization_handler.py  protocol.py  sidecar_builder.py  sound_event_signal_combiner.py  spectral_flatness_detector.py  types.py
backend/pipeline/evaluation/: Dockerfile  debug_google.py  evaluation_core.py  evaluation_core_test.py  evaluator.py  evaluator_tests.py  main.py  requirements.txt  service.py  test_evaluation_core.py
backend/pipeline/ingestion/: Dockerfile  README.md  batch_ingest.py  bcfy_feed_ingest.py  gcp_helper.py  gcs.py  heartbeat.py  icecast_collector.py  main.py  normalizer_runtime.py  requirements.txt  retry.py  router.py  settings.py  shutdown.py  test_batch_ingest.py  test_icecast_collector.py
backend/pipeline/notification/: Dockerfile  notification_deduplication.py  request_handler.py  requirements.txt  send_notification.py  send_notification_test.py  test_notification_deduplication.py  test_request_handler.py  test_send_notification.py
backend/pipeline/rules/: Dockerfile  main.py  service.py
backend/pipeline/schema_types/: __init__.py  alert_notification_pb2.py  alert_notification_pb2.pyi  audio_pb2.py  audio_pb2.pyi  evaluated_transcribed_audio_pb2.py  evaluated_transcribed_audio_pb2.pyi  transcribed_audio_pb2.py  transcribed_audio_pb2.pyi
backend/pipeline/storage/: __init__.py  connection.py  feed_store.py  rules_queries.py  rules_store.py  settings.py  test_connection.py  test_feed_store.py
backend/pipeline/transcription/: Dockerfile  audio_fetcher.py  audio_processor.py  audio_uploader.py  chirp_keywords.json  constants.py  datatypes.py  detectors.py  dsp.py  enums.py  main.py  metadata.json  metadata.py  options.py  orchestration.py  order_restorer.py  pyproject.toml  requirements.txt  resources.py  sequence_buffer.py  stitcher.py  stitcher_state.py  telemetry.py  transcriber.py  transcribers.py  transcription_handler.py  transforms.py  utils.py  vads.py
backend/pipeline/transcription/tests/: mock_vad.py  test_audio_fetcher.py  test_audio_processor.py  test_audio_uploader.py  test_dsp.py  test_metadata.py  test_orchestration.py  test_sequence_buffer.py  test_stitcher_state.py  test_telemetry.py  test_transcriber.py  test_transcribers.py  test_transcription_handler.py  test_transforms.py  test_utils.py  test_vads.py
backend/pipeline/transcription/transcription_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md
frontend/transcription-ui/: index.html  package.json
infra/local/: pubsub_init.py  test_publish.py
integration_tests/: conftest.py  test_notification_redis.py  test_rules_creation_evaluation_publish.py  utils.py
integration_tests/storage/: conftest.py  test_feed_store_integration.py  test_rules_store_integration.py
local-dev/: LOCAL.env  local_env.json  mock_server.py  pubsub_init.py  test_evaluation_publish.py
local_dev/: LOCAL.env  mock_server.py  pubsub_init.py  run_evaluation_publish.py  test_evaluation_publish.py
model/colabs/: chirp_1_segment_label_studio_examples.ipynb  chirp_2_transcribe_label_studio_examples.ipynb  chirp_3_analyze_transcription_results.ipynb  create_nemo_manifest.ipynb  evaluate_transcriptions.ipynb  gemini_2_transcribe_label_studio_examples.ipynb  gemini_3_analyze_transcription_results.ipynb  gemini_transcription.ipynb  gemma3n_inference.ipynb  label_studio_to_nemo.ipynb  merge_inference_manifests.ipynb
model/data/: README.md  apache.py
model/data/broadcastify/: README.md  all_bcfy_feeds_202601.csv  archive_urls_sample_20260114_12hrs.csv  bcfy_api.py  bcfy_types.py  fetch_all_broadcastify_archive_urls.py  get_all_feeds.py  sample_broadcastify_archive.py
model/data/echo/: README.md  echo_mono_samples_20251208.csv  make_mono_echo_feeds_csv.py  s3_file_scanner.py
model/data/fire_notifications/: README.md  fetch_fn_archives_day.py  fn_api.py  fn_types.py
model/data/inference_manifests/: README.md  playground_all_models.jsonl  playground_parakeet_and_canary_flash.json  playground_parakeet_and_canary_flash.jsonl  playground_parakeet_and_canary_flash_and_chirp.jsonl  playground_parakeet_and_canary_flash_and_chirp_with_context.jsonl  playground_parakeet_and_canary_flash_and_gemini_3_1_pro_preview.jsonl  playground_parakeet_and_canary_flash_and_gemma3n_e2b_it.json  playground_parakeet_and_canary_flash_and_gemma3n_e2b_it.jsonl
model/data/label_studio_exports/: playground_export.json
model/data/manifests/: README.md  playground_export_nemo.json  s3_samples.csv  s3_samples.json
model/training_data/: README.md
model/training_data/echo/: all_echo_mono_streams.csv
protos/: alert_notification.proto  audio.proto  evaluated_transcribed_audio.proto  raw_audio_chunk.proto  sed_metadata.proto  source_types.proto  transcribed_audio.proto
terraform/modules/alloydb/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/alloydb_ingestion/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_function/: main.tf  outputs.tf  variables.tf
terraform/modules/container_mig/: cloud_config.yaml.tftpl  main.tf  outputs.tf  variables.tf  (+1 more)
(+70 files in other folders)
