[project]
name = "radio-transcription"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "functions-framework",
    "requests",
    "cloudevents",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-logging",
    "google-cloud-storage>=2.18.2,<3",
    "asyncpg>=0.29.0",
    "google-cloud-alloydb-connector[asyncpg]",
    "aiohttp>=3.13.3",
    "gcloud-aio-storage>=9.6.4",
    "google-genai>=1.3.0",
    "pydantic>=2.10.6",
    "protobuf>=4.25.3",
    "apache-beam[gcp]>=2.56.0",
    "crcmod>=1.7",
    "google-cloud-monitoring>=2.29.1",
    "google-cloud-speech>=2.37.0",
    "numpy>=1.24.0,<2",
    "pydub>=0.25.0",
    "ten-vad>=1.0.6.8",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "redis>=7.3.0",
    "soundfile>=0.12.1",
    "scipy>=1.11.0",
    "chardet<6",
    "urllib3>=2.6.3",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
build = [
  "grpcio-tools>=1.65.5",
]
dev = [
  "ruff>=0.14.14",
  "ty>=0.0.21",
  "grpcio-tools",
  "testcontainers[postgres]",
  "docker",
  "httpx",
  "fakeredis",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pre-commit",
  "boto3",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["model/colabs", "backend/pipeline/schema_types", "**/*_pb2.py", "**/*_pb2.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "ARG003",  # Unused class method argument
  "ARG004",  # Unused static method argument
  "ARG005",  # Unused lambda argument
  "B007",    # Loop control variable not used within loop body
  "B904",    # Within an `except` clause, raise exceptions with `raise ... from err`
  "BLE001",  # Do not catch blind exception: `Exception`
  "C401",    # Unnecessary generator (rewrite as a set comprehension)
  "C402",    # Unnecessary generator (rewrite as a dict comprehension)
  "C408",    # Unnecessary `dict()` call (rewrite as a literal)
  "C901",    # Function is too complex
  "COM812",  # missing-trailing-comma
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "D106",    # Missing docstring in public nested class
  "D107",    # Missing docstring in `__init__`
  "D200",    # One-line docstring should fit on one line
  "D203",    # 1 blank line required before class docstring
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "D400",    # First line should end with a period
  "D401",    # First line of docstring should be in imperative mood
  "D415",    # First line should end with a period, question mark, or exclamation point
  "DTZ001",  # `datetime.datetime()` called without a `tzinfo` argument
  "DTZ003",  # `datetime.datetime.utcnow()` used
  "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument
  "DTZ006",  # `datetime.datetime.fromtimestamp()` called without a `tz` argument
  "DTZ007",  # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "E501",    # Line too long
  "ERA001",  # Found commented-out code
  "FIX002",  # Line contains TODO
  "G001",    # Logging statement uses `str.format`
  "G004",    # Logging statement uses f-string
  "ICN001",  # `xml.etree.ElementTree` should be imported as `ET`
  "N801",    # Class name should use CapWords convention
  "N806",    # Variable in function should be lowercase
  "N813",    # Camelcase imported as lowercase
  "N818",    # Exception name should be named with an Error suffix
  "PERF401", # Use a list comprehension to create a transformed list
  "PGH003",  # Use specific rule codes when ignoring type issues
  "PLC0206", # Extracting value from dictionary without calling `.items()`
  "PLR0913", # Too many arguments in function definition
  "PLR1714", # Consider merging multiple comparisons
  "PLR2004", # Magic value used in comparison
  "PLW1641", # Object does not implement `__hash__` method
  "PT009",   # Use a regular `assert` instead of unittest-style `assertEqual`
  "PT027",   # Use `pytest.raises` instead of unittest-style `assertRaises`
  "PTH118",  # `os.path.join()` should be replaced by `Path` with `/` operator
  "PTH123",  # `open()` should be replaced by `Path.open()`
  "RSE102",  # Unnecessary parentheses on raised exception
  "RUF001",  # String contains ambiguous character
  "RUF003",  # Comment contains ambiguous character
  "RUF005",  # Consider iterable unpacking instead of concatenation
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF015",  # Prefer `next(...)` over single element slice
  "S106",    # Possible hardcoded password assigned to argument
  "S301",    # `pickle` can be unsafe when used to deserialize untrusted data
  "S303",    # Use of insecure MD2, MD4, MD5, or SHA1 hash function
  "S308",    # Use of `mark_safe` may expose cross-site scripting vulnerabilities
  "S314",    # Using `xml` to parse untrusted data is known to be vulnerable
  "S324",    # Probable use of insecure hash functions in `hashlib`
  "S603",    # `subprocess` call: check for execution of untrusted input
  "S607",    # Starting a process with a partial executable path
  "SIM101",  # Multiple `isinstance` calls, merge into a single call
  "SIM102",  # Use a single `if` statement instead of nested `if` statements
  "SIM103",  # Return the negated condition directly
  "SIM105",  # Use `contextlib.suppress(...)` instead of `try`-`except`-`pass`
  "SIM108",  # Use ternary operator instead of `if`-`else`-block
  "SIM117",  # Use a single `with` statement with multiple contexts
  "SIM118",  # Use `key in dict` instead of `key in dict.keys()`
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "TRY401",  # Redundant exception object included in `logging.exception` call
  "UP007",   # Use `X | Y` for type annotations
  "UP008",   # Use `super()` instead of `super(__class__, self)`
  "UP030",   # Use implicit references for positional format fields
  "W291",    # Trailing whitespace
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# for reference: Flake8 is 15
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["backend", "local_dev"]

[tool.ruff.lint.per-file-ignores]
"**/**/test*.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN202", # Missing return type annotation for public method
  "ANN206", # Missing return type annotation for classmethod
  "B017",   # Do not assert blind exception: `Exception`
  "C405",   # Unnecessary list literal (rewrite as a set literal)
  "DTZ002", # `datetime.datetime.today()` used
  "DTZ006", # `datetime.datetime.fromtimestamp()` called without a `tz` argument
  "N802",   # Function name should be lowercase
  "N806",   # Variable in function should be lowercase
  "N815",   # Variable in class scope should not be mixedCase
  "PT018",  # Break assertions into separate statements
  "PT019",  # Fixture without value is injected as parameter
  "PT028",  # Test function parameter has default argument
  "RET503", # Missing explicit `return` at the end of function
  "S101",   # Use of assert detected
  "S105",   # Possible hardcoded password assigned
  "S113",   # requests.* require timeout=
  "S608",   # Possible SQL injection via string-based query construction
  "SLF001", # Private member accessed
]
"model/data/**.py" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing return type annotation
  "B017",   # Do not assert blind exception: `Exception`
  "C405",   # Unnecessary list literal (rewrite as a set literal)
  "DTZ002", # `datetime.datetime.today()` used
  "DTZ006", # `datetime.datetime.fromtimestamp()` called without a `tz` argument
  "INP001", # Implicit namespaces
  "N802",   # Function name should be lowercase
  "N806",   # Variable in function should be lowercase
  "RET503", # Missing explicit `return` at the end of function
  "S105",   # Possible hardcoded password assigned
  "S110",   # Allow swallowing exceptions
  "S113",   # requests.* require timeout=
  "T201",   # `print()` found
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
exclude = ["model/"]

[tool.pyright]
pythonVersion = "3.12"


